--- a/public/listing-header.html
+++ b/public/listing-header.html
@@ -102,7 +102,7 @@
 
     /** make up one button */
     const a = document.createElement("a");
-    a.innerHTML = "<img src='/icons/folder.png' /><b>Up one folder</b>";
+    a.innerHTML = "<img src='/icons/folder.svg' /><b>Up one folder</b>";
     a.href = document.querySelector("tr:nth-child(3) td:nth-child(2) a").href;
     document.body.insertBefore(a, table);
 
